# companies-house-filing

./: .coveragerc  README.md  TEST_STRATEGY.md  accts.html  config.json  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yaml  pull-request.yaml  release.yaml  validate-workflows.yaml
ch_filing/: __main__.py  client.py  company_data.py  envelope.py  form_submission.py  state.py  submission_status.py
ch_filing/test_server/: __init__.py  __main__.py  data.py  handlers.py  responses.py  server.py
schema/: CompanyData-v3-4.xsd  Egov_ch-v2-0.xsd
scripts/: ch-filing
tests/contract/: test_request_schemas.py  test_response_schemas.py
tests/e2e/: test_batch_operations.py  test_cli_operations.py  test_cli_scripting.py
tests/fixtures/: README.md  company_data_response.xml  error_responses.xml  form_submission_response.xml  sample_accounts.html  submission_status_response.xml
tests/fixtures/accounts/: micro_entity_accounts.html  small_company_accounts.html
tests/fixtures/configurations/: complete_config.json  invalid_config.json  micro_entity_config.json  minimal_config.json
tests/fixtures/data/: test_data_generator.py
tests/fixtures/responses/: comprehensive_error_responses.xml
tests/fixtures/scripts/: generate_test_suite.py
tests/integration/: test_client_server_workflow.py  test_data_validation.py  test_error_handling.py  test_network_resilience.py
tests/performance/: __init__.py  test_load_testing.py  test_memory_usage.py
tests/security/: __init__.py  test_authentication_security.py  test_security_validation.py
tests/unit/: test_client.py  test_company_data.py  test_envelope.py  test_form_submission.py  test_state.py  test_submission_status.py
